--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700&text=ABDEFGHIJLMNOPQRSTUVWXYZ">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&text=CK">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header>
@@ -17,8 +18,7 @@
                 <h1><!--<img src="header_logo.svg" alt="Sigene Beta">--><small>駅名標ジェネレーター</small></h1>
                 <ul>
                     <li><a href="index.html">Top</a></li>
-                    <li><a href="about/index.html">About</a></li>
-                    <li><a href="contact/index.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </div>
         </header>
