--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="header-flex">
-                <h1><!--<img src="header_logo.svg" alt="Sigene Beta">--><small>駅名標ジェネレーター</small></h1>
+                <h1><img src="header_logo.svg" alt="Sigene Beta"><small>駅名標ジェネレーター</small></h1>
                 <ul>
                     <li><a href="index.html">Top</a></li>
                     <li><a href="about.html">About</a></li>
@@ -193,9 +193,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input
-                            type="color"
-                            v-model="leftStations[0].lineColor">
+                        <color-picker v-model="leftStations[0].lineColor" @change="update"></color-picker>
                     </label>
                     <label>
                         <input
@@ -218,10 +216,7 @@
                                 <div class="invalid-message">アルファベット2文字と数字2桁で入力してください</div>
                             </label>
                             <label class="inline">
-                                <input
-                                    type="color"
-                                    list="numberingColors"
-                                    v-model="n.color">
+                                <color-picker v-model="n.color" :list="numberingColors" @change="update"></color-picker>
                             </label>
                             <button @click.prevent="leftStations[0].numberings.splice(i, 1) + update()">削除</button>
                         </div>
@@ -246,9 +241,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input
-                            type="color"
-                            v-model="leftStations[1].lineColor">
+                        <color-picker v-model="leftStations[1].lineColor" @change="update"></color-picker>
                     </label>
                     <label>
                         <input
@@ -271,10 +264,7 @@
                                 <div class="invalid-message">アルファベット2文字と数字2桁で入力してください</div>
                             </label>
                             <label class="inline">
-                                <input
-                                    type="color"
-                                    list="numberingColors"
-                                    v-model="n.color">
+                                <color-picker v-model="n.color" :list="numberingColors" @change="update"></color-picker>
                             </label>
                             <button @click.prevent="leftStations[1].numberings.splice(i, 1) + update()">削除</button>
                         </div>
@@ -299,9 +289,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input
-                            type="color"
-                            v-model="rightStations[0].lineColor">
+                        <color-picker v-model="rightStations[0].lineColor" @change="update"></color-picker>
                     </label>
                     <label>
                         <input
@@ -324,10 +312,7 @@
                                 <div class="invalid-message">アルファベット2文字と数字2桁で入力してください</div>
                             </label>
                             <label class="inline">
-                                <input
-                                    type="color"
-                                    list="numberingColors"
-                                    v-model="n.color">
+                                <color-picker v-model="n.color" :list="numberingColors" @change="update"></color-picker>
                             </label>
                             <button @click.prevent="rightStations[0].numberings.splice(i, 1) + update()">削除</button>
                         </div>
@@ -352,9 +337,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input
-                            type="color"
-                            v-model="rightStations[1].lineColor">
+                        <color-picker v-model="rightStations[1].lineColor" @change="update"></color-picker>
                     </label>
                     <label>
                         <input
@@ -377,10 +360,7 @@
                                 <div class="invalid-message">アルファベット2文字と数字2桁で入力してください</div>
                             </label>
                             <label class="inline">
-                                <input
-                                    type="color"
-                                    list="numberingColors"
-                                    v-model="n.color">
+                                <color-picker v-model="n.color" :list="numberingColors" @change="update"></color-picker>
                             </label>
                             <button @click.prevent="rightStations[1].numberings.splice(i, 1) + update()">削除</button>
                         </div>
@@ -418,7 +398,7 @@
                         <div>
                             <label class="inline">
                                 <div class="label-text">色</div>
-                                <input type="color" v-model="routeColors[i]" list="routeColors">
+                                <color-picker v-model="routeColors[i]" :list="routeColors" @change="update"></color-picker>
                             </label>
                             <button @click.prevent="routeColors.splice(i, 1) + update()">削除</button>
                         </div>
@@ -426,82 +406,6 @@
                 </section>
             </section>
         </form>
-
-        <datalist id="blackColors">
-            <option value="#1A1A1A"></option>
-            <option value="#444444"></option>
-        </datalist>
-        <datalist id="numberingColors">
-            <option value="#A6A6A6"></option>
-            <option value="#FF8A21"></option>
-            <option value="#FDD700"></option>
-            <option value="#72C11D"></option>
-            <option value="#00B983"></option>
-            <option value="#00C3A5"></option>
-            <option value="#00ADCD"></option>
-            <option value="#006FC5"></option>
-            <option value="#B91E36"></option>
-            <option value="#E21F25"></option>
-        </datalist>
-        <datalist id="routeColors">
-            <option value="#808080"></option>
-            <option value="#888888"></option>
-            <option value="#E93920"></option>
-            <option value="#DB4028"></option>
-            <option value="#F15A22"></option>
-            <option value="#D56A29"></option>
-            <option value="#EE7B28"></option>
-            <option value="#C56E2E"></option>
-            <option value="#F18E44"></option>
-            <option value="#CB7B35"></option>
-            <option value="#F68B1E"></option>
-            <option value="#CD7A1E"></option>
-            <option value="#A8A39D"></option>
-            <option value="#F1AA28"></option>
-            <option value="#F1AA28"></option>
-            <option value="#FFC20D"></option>
-            <option value="#FFD400"></option>
-            <option value="#9ACD32"></option>
-            <option value="#80C241"></option>
-            <option value="#7BC24B"></option>
-            <option value="#72BC4A"></option>
-            <option value="#36823E"></option>
-            <option value="#41934C"></option>
-            <option value="#40934D"></option>
-            <option value="#368C44"></option>
-            <option value="#6FBF7F"></option>
-            <option value="#3CB371"></option>
-            <option value="#339966"></option>
-            <option value="#00B261"></option>
-            <option value="#00B48D"></option>
-            <option value="#00B5AD"></option>
-            <option value="#009793"></option>
-            <option value="#16C0E9"></option>
-            <option value="#00B3E6"></option>
-            <option value="#00B3E6"></option>
-            <option value="#00B2E5"></option>
-            <option value="#00B9F1"></option>
-            <option value="#00AAEE"></option>
-            <option value="#0C7AAD"></option>
-            <option value="#0F5474"></option>
-            <option value="#008DD1"></option>
-            <option value="#007AC0"></option>
-            <option value="#0073BF"></option>
-            <option value="#3B459B"></option>
-            <option value="#3333FF"></option>
-            <option value="#9370DB"></option>
-            <option value="#9E7EB9"></option>
-            <option value="#9D72B0"></option>
-            <option value="#922790"></option>
-            <option value="#851A72"></option>
-            <option value="#C71585"></option>
-            <option value="#F387B7"></option>
-            <option value="#ED77A4"></option>
-            <option value="#880022"></option>
-            <option value="#AA1E30"></option>
-            <option value="#C9242F"></option>
-        </datalist>
-
         <script src="https://unpkg.com/vue" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js" defer></script>
