--- a/about.html
+++ b/about.html
@@ -19,10 +19,19 @@
             </div>
         </header>
         <main>
-            <img src="logo.svg" width="256" height="256" alt="ロゴ">
+            <img src="logo.svg" width="128" height="128" alt="ロゴ">
             <h2><img src="logo_text.svg" alt="Sigene Beta"></h2>
             <p>駅名標ジェネレーター</p>
             <small>&copy; 2018 TR_246</small>
+            <hr>
+            <h2>駅名標ジェネレーターついて</h2>
+            <p>現在、JR東日本の漢字主体、SE型(LED)筐体の駅名標の画像を生成することができます。バグ潰し等をしていないため、Beta版として公開しています。</p>
+            <!--<h2>バグを発見した場合</h2>
+            <p>バグが発生した場合、再現できなければ直すことができないため、「何」を「どう」したら「どう」なった、という情報を、使用したブラウザも含めてご連絡ください。内容によってはバグではなく仕様の場合、修正が不可能な場合がありますのでご了承ください。</p>-->
+            <h2>既知の問題</h2>
+            <ul>
+                <li>カラーピッカーで直接入力した場合、少しずれた数値になることがある</li>
+            </ul>
         </main>
     </body>
 </html>
